# cdk-cognito-project

./: Dockerfile.backend  pyproject.toml  requirements.txt
backend/: app.py  requirements.txt
backend/backlog/tasks/: task-1 - Create-a-simple-fastapi-app.md
backlog/: config.yml
backlog/archive/tasks/: task-2 - Configure-the-aws-account.md
backlog/tasks/: task-3 - setup-UV-for-project.md  task-4 - create-a-docker-file-and-access-the-.env-params-in-fastapi-app.md
